DMSAzureARM/Templates/02.0CreateNSG.json
{
  "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "_artifactsLocation": {
      "type": "string"
    },
    "_artifactsLocationSasToken": {
      "type": "securestring"
    }

  },
  "variables": {
    "stagingNSGName": "stagingNSG",
    "inner_subnetTemplateFolder": "nestedtemplates",
    "inner_subnetTemplateFileName": "inner_subnet.json",
    "inner_subnetTemplateParametersFileName": "inner_subnet.parameters.json",
    "testTemplateFolder": "nestedtemplates",
    "testTemplateFileName": "test.json",
    "testTemplateParametersFileName": "test.parameters.json"

  },
  "resources": [
    {
      "apiVersion": "2017-03-01",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('stagingNSGName')]",
      "location": "[resourceGroup().location]",
      "tags": {
        "displayName": "NSG - Satging"
      },
      "properties": {
        "securityRules": [
          {
            "name": "rdp-rule",
            "properties": {
              "description": "Allow RDP",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "web-rule",
            "properties": {
              "description": "Allow WEB",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 101,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "name": "inner_subnet",
      "type": "Microsoft.Resources/deployments",
      "apiVersion": "2016-09-01",
      "dependsOn": [],
      "properties": {
        "mode": "Incremental",
        "templateLink": {
          "uri": "https://sarojwebappstorage.blob.core.windows.net/sarojcontainer/network.json",
          "contentVersion": "1.0.0.0"
        },
        "parametersLink": {
          "uri": "https://sarojwebappstorage.blob.core.windows.net/sarojcontainer/network.parameters.json",
          "contentVersion": "1.0.0.0"
        }
      }
    }
  ]
}
